--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,10 @@ nav {
     padding: 10px;
     margin: 10px;
     border: 1px solid #333;
+
+    width: 70%;
+	float: right;
+	margin: 1em 1em 0 0;
 }
 
 nav ul {
