--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,6 @@ header {
     border-radius: 10px;
     box-shadow: 4px 2px 2px black;
     text-align: center;
-    position: sticky;
-    top: 0;
 }
 
 header img {
@@ -54,13 +52,14 @@ nav {
     margin: 10px;
     border: 1px solid #333;
 
-    width: 70%;
-	float: right;
-	margin: 1em 1em 0 0;
 }
 
 nav ul {
     list-style-type: none;
+}
+
+nav ul li{
+    display: inline;
 }
 
 main {
