--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h6 {
 }
 
 header {
-    background-color: black;
+    background-color: rgb(71, 71, 71);
     margin: 10px 0;
     border-radius: 10px;
     box-shadow: 4px 2px 2px black;
