--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,11 @@ a:hover {
 	color: #4caf50;
 }
 
+.text-center{
+	text-align: center;
+}
+
+
 /* Mobile Styles */
 @media (max-width: 600px) {
 	.container {
@@ -177,4 +182,26 @@ a:hover {
 	.container {
 		padding: 0 100px;
 	}
+}
+
+/* Mobile Styles */
+@media (max-width: 600px) {
+	body{
+        font-size: 12px;
+    }
+    
+}
+
+/* Tablet Styles */
+@media (min-width: 601px) and (max-width: 1024px) {
+	body{
+        font-size: 14px;
+    }
+}
+
+/* Desktop Styles */
+@media (min-width: 1025px) {
+	body{
+        font-size: 16px;
+    }
 }
