--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Gilda+Display&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+/* Primary Color: #0039a6 */
+/* Primary bg: #a9c5fb */
 
 body,
 header,
@@ -16,7 +20,7 @@ ul {
 
 body {
 	background-color: white;
-	font-family: "Space Mono", monospace;
+	font-family: "Poppins", sans-serif;
 }
 
 h1,
@@ -25,66 +29,124 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Gilda Display", serif;
+	color: #555;
+	font-family: "Poppins", sans-serif;
 }
 
-.banner-image {
+.m-auto{
+	margin: auto;
 }
-.logo {
-	width: 100px;
+
+.pr-40{
+	padding-right: 40px;
 }
+
 .container {
 	max-width: 1300px;
 	margin: 20px auto;
 	padding: 0 20px;
 }
 
+.icon{
+	width:50px;
+}
+
 h2 {
-	color: #4caf50;
-    margin-top: 14px;
+	margin-top: 14px;
+}
+
+.text-center{
+	text-align: center;
+}
+
+.mt-5{
+	margin-top: 50px;
 }
 
 h1,
 h2 {
-	text-align: center;
+	color: #0039a6;
+
 	margin-bottom: 20px;
 }
 
-.btn{
-    background: #ddd;
-    padding: 0 10px;
+a:link,
+a:visited {
+	color: #333;
+	text-decoration: none;
+}
+
+.btn {
+	background: #a9c5fb;
+	padding: 10px 20px;
+	border-radius: 6px;
+	border: 2px solid #a9c5fb;
+	margin: 10px 0;
+	display: inline-block;
+}
+
+.btn:hover{
+	border: 2px solid #0039a6;
+	transition: all ease 0.4s;
+}
+
+p{
+	text-align: justify;
 }
 
 header {
-	background-color: rgb(71, 71, 71);
-	margin: 10px 0;
-	border-radius: 10px;
-	box-shadow: 4px 2px 2px black;
+	/* background-color: rgb(71, 71, 71); */
+	margin: 0;
+	/* border-radius: 10px; */
+	/* box-shadow: 4px 2px 2px black; */
 	text-align: center;
 }
+.banner-image {
+	height: 200px;
+	width: 100%;
+	margin-bottom: 20px;
+	object-fit: cover;
+}
 
-header img {
-	margin: 0 auto;
-    width:100%;
-    height: 50%;
+.logo {
+	width: 200px;
+	margin: 5px;
 }
 
 nav {
-	box-shadow: 1px solid black;
-	padding: 5px;
+	padding: 20px;
 	margin: 10px;
-	border: 1px solid #333;
+	border: 2px solid #a9c5fb;
 	margin: auto;
 	text-align: center;
+	border-radius: 20px;
+	width: 95%;
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	align-items: center;
 }
+
+
 
 nav ul {
 	list-style-type: none;
+	text-align: right;
 }
 
 nav ul li {
 	display: inline;
-    margin:20px;
+	margin: 10px;
+}
+
+nav ul li a {
+	padding: 10px 25px;
+	border-radius: 10px;
+}
+
+nav ul li a:hover {
+	transition: all ease 0.4s;
+	/* color: white; */
+	background: #a9c5fb;
 }
 
 main {
@@ -95,12 +157,47 @@ main {
 	box-shadow: 5px red;
 }
 
+.home-content{
+	display: grid;
+	grid-template-columns: 50% 50%;
+}
+
+.home-contact{
+	display: grid;
+	grid-template-columns: 50% 50%;
+gap: 40px;
+}
+
+.home-contact img{
+	width: 100%;
+	border-radius: 10px;
+}
+
+.card{
+	background: #cfdfff;
+	border-radius: 20px;
+	padding:  40px;
+	margin: 20px;
+}
+
+.card .btn{
+
+}
+
 footer p {
 	font-size: 12px;
 	text-align: center;
 	margin-top: 10px;
 }
 
+.text-center {
+	text-align: center;
+}
+
+/* Mobile Styles */
+@media (max-width: 600px) {
+	
+}
 
 /* product-of-week */
 .product-of-week {
@@ -146,30 +243,6 @@ footer p {
 	font-size: 30px;
 	color: #893023;
 }
-
-/* Navigation Links Pseudo-Classes */
-a:link,
-a:visited {
-	color: #333;
-	text-decoration: none;
-}
-
-a:hover {
-	color: #4caf50;
-}
-
-.text-center{
-	text-align: center;
-}
-
-
-/* Mobile Styles */
-@media (max-width: 600px) {
-	.container {
-		padding: 0 5px;
-	}
-}
-
 /* Tablet Styles */
 @media (min-width: 601px) and (max-width: 1024px) {
 	.container {
@@ -186,22 +259,59 @@ a:hover {
 
 /* Mobile Styles */
 @media (max-width: 600px) {
-	body{
-        font-size: 12px;
-    }
-    
+	body {
+		font-size: 20px;
+	}
+	.container {
+		padding: 0 5px;
+	}
+	nav {
+		padding: 10px;
+		margin: 10px;
+		border: none;
+		margin: auto;
+		text-align: center;
+		border-radius: 20px;
+		width: 95%;
+		display: block;
+		align-items: center;
+	}
+	nav ul {
+		list-style-type: none;
+		text-align: center;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+	nav ul li {
+		display: block;
+		margin: 15px;
+	}
+	.home-content{
+		display: block;
+	}
+	
+	.home-contact{
+		display: block;
+	}
+
+	.card{
+		padding: 30px 20px;
+	}
+	p{
+		text-align: left;
+	}
 }
 
 /* Tablet Styles */
 @media (min-width: 601px) and (max-width: 1024px) {
-	body{
-        font-size: 14px;
-    }
+	body {
+		font-size: 14px;
+	}
 }
 
 /* Desktop Styles */
 @media (min-width: 1025px) {
-	body{
-        font-size: 16px;
-    }
+	body {
+		font-size: 16px;
+	}
 }
