--- a/css/team.css
+++ b/css/team.css
@@ -1,24 +1,54 @@
 /* team.css */
 
-
-.grid img{
-    width: 250px;
+/* Mobile first css */
+figure img {
+	width: 200px;
+	border-radius: 10px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	transition: all 0.4s ease;
+}
+figure img:hover {
+	transform: scale(1.05);
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+		rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+		rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
-section{
-    margin: 30px 0;
+figcaption .designation {
+	font-size: 1.2em;
+	font-weight: bold;
+	line-height: 1;
+	margin-bottom: 0;
 }
+figcaption .name {
+	font-size: 1em;
+	margin: 0;
+	color: #0039a6;
+
+}
+
+section {
+	margin: 30px 0;
+}
+
+.grid {
+	display: block;
+}
+
+
 
 /* Media Query for Tablet Viewport */
-@media screen and (min-width: 550px), print {
-	figcaption {
-		text-align: center;
-		margin-top: 8px;
-	}
+@media screen and (min-width: 790px), print {
+
+
 	.grid {
-		display: grid;
 		grid-template-columns: 2;
+		display: grid;
 		grid-gap: 10px;
+	}
+
+	figcaption {
+		margin-top: 15px;
 	}
 
 	aside {
@@ -27,14 +57,14 @@ section{
 }
 
 /* Media Query for Desktop Viewport. */
-@media screen and (min-width: 769px), print {
+
+@media screen and (min-width: 1450px), print {
+
 	.grid {
 		grid-template-columns: 4;
 	}
-  
-	figcaption {
-		font-size: 1em;
-	}
+
+	
 	aside {
 		grid-column: 1 / span 4;
 	}
