--- a/css/specials.css
+++ b/css/specials.css
@@ -26,6 +26,7 @@
 	padding: 20px 0px;
     border: 1px solid black;
     border-radius: 10px;
+	cursor: pointer;
 }
 
 .product-card:hover img, .product-card:hover p.title {
