no hero on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,9 @@ nav ul.mobile-ham-menu{
 
 /* Mobile Styles */
 @media (max-width: 600px) {
-	
+	.hero{
+		display: none;
+	}
 	.container {
 		padding: 0 5px;
 	}
